--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,6 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
-    <h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %><h2>
+    <h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
     <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
@@ -12,8 +12,8 @@
     	<li>
     		<%= review.thoughts %>, <strong><%= review.rating %></strong>/5
     	</li>
-    	<% end %>
     </ul>
+        <% end %>
     <% else %>
     	<p>No reviews</p>
     <% end %>
@@ -22,4 +22,6 @@
   No restaurants yet!
 <% end %>
 
-<a href="<%=new_restaurant_path%>">Add a restaurant</a>
+<% if user_signed_in? %>
+    <a href="<%=new_restaurant_path%>">Add a restaurant</a>
+<% end %>
