--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,7 +7,9 @@
         <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
     <% end %>
 
+<% if user_signed_in? %>
     <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+<% end %>
     
     <h3>Reviews for <%=restaurant.name %></h3>
     <% if restaurant.reviews.any? %>
