--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,15 +1,16 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
+    <h3> Average rating: <%= restaurant.average_rating.to_i %> </h3>
     
     <% if restaurant.user_id == @user_id %>
         <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
         <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
     <% end %>
 
-<% if user_signed_in? %>
-    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
-<% end %>
+    <% if user_signed_in? %>
+        <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+    <% end %>
     
     <h3>Reviews for <%=restaurant.name %></h3>
     <% if restaurant.reviews.any? %>
@@ -17,7 +18,8 @@
     	<% restaurant.reviews.each do |review| %>
     	<li>
     		<%= review.thoughts %>, <strong><%= review.rating %></strong>/5
-    	</li>
+        </li>
+            <%= link_to "Delete Review", restaurant_review_path(restaurant, review), method: :delete %>
     </ul>
         <% end %>
     <% else %>
