--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,7 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <h2><%= link_to "#{restaurant.name}", restaurant_path(restaurant) %></h2>
-    <h3> Average Rating: <%= restaurant.average_rating.to_i %> </h3>
+    <h3> Average Rating: <%= restaurant.average_rating.to_i %> <%= star_rating(restaurant.average_rating) %> </h3>
     
     <% if restaurant.user_id == @user_id %>
         <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
